--- a/src/index.css
+++ b/src/index.css
@@ -16,10 +16,7 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+  padding: 0;
+
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-}
